# electro_diffusion

./: CMakeLists.txt  LICENSE  PNP_1D.cpp  PNP_1D.h  README.md  charge_marking.cpp  charge_marking.h  choose_fvgeom.h  config_cmake.h  constrained_ilu.h  constrained_preconditioner.h  copy_neighbor_value_constraint.h  copy_neighbor_value_constraint_impl.h  domain1d_solution_adjuster.cpp  domain1d_solution_adjuster.h  edl_1d.cpp  edl_1d.h  electric_circuit.cpp  electric_circuit.h  extension_refMarkAdjuster.cpp  extension_refMarkAdjuster.h  flux_exporter.cpp  flux_exporter.h  interface1d_fv.cpp  interface1d_fv.h  interface1d_fv1.h  interface1d_fv1_impl.h  interface1d_fv_impl.h  interface_1d_fv1.cpp  interface_1d_fv1.h  intf_distro_adjuster.cpp  intf_distro_adjuster.h  intf_refMarkAdjuster.cpp  intf_refMarkAdjuster.h  mem_info.cpp  mem_info.h  mem_info_apple.cpp  mem_info_linux.cpp  morpho_gen.cpp  morpho_gen.h  (+22 more)
extension/: domain1d_solution_adjuster.cpp  domain1d_solution_adjuster.h  extension_refMarkAdjuster.cpp  extension_refMarkAdjuster.h
interface/: interface1d_fv.cpp  interface1d_fv.h  intf_distro_adjuster.cpp  intf_distro_adjuster.h  intf_refMarkAdjuster.cpp  intf_refMarkAdjuster.h
util/: choose_fvgeom.h  edl_1d.cpp  edl_1d.h  electric_circuit.cpp  electric_circuit.h  flux_exporter.cpp  flux_exporter.h  neck_recorder.cpp  neck_recorder.h  nernst_planck_util.cpp  nernst_planck_util.h  order.cpp  order.h  redistribution_util.cpp  redistribution_util.h  refinement_error_estimator.cpp  refinement_error_estimator.h
